--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,3 @@
-.about {
- height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #282c34;
-  color: white;
+.About{
+    height: 100vh;
 }
