--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,14 +1,96 @@
-/* Header.css */
+/* Header CSS */
 .header {
+  padding-top: 6vh;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #252324;
-  color: white;
-  text-align: center; /* Ensure the text is centered */
+  background-color: #0c1b2b;
+  display: grid;
+  place-items: center;
 }
 
-.name {
-  font-size: 3rem;
+#hero{
+  width: 80%;
+  color: white;
+  display: flex;
+}
+#Hi {
+  line-height: 0;
+  color: #00F2DE;
+  font-family: "Inconsolata", monospace;
+  animation: fromRight 1s,fadeIn 1s ease-out forwards; /* Animation on #fullName */
+}
+
+#full_name {
+  line-height: 1;
+  opacity: 0;
+  font-size: 5vw;
+  font-weight: 700;
+  animation: fromRight .5s,fadeIn 1s ease-out forwards; /* Animation on #fullName */
+  animation-delay: 0.2s; /* Delay on #fullName */
+}
+#career {
+  line-height: 1;
+  opacity: 0;
+  font-size: 2.7vw;
+  font-weight: 700;
+  animation: fromRight 1.5s,fadeInOpacity 1.5s ease-out forwards; /* Animation on #fullName */
+  animation-delay: 0.3; /* Delay on #fullName */
+}
+#description {
+  opacity: 0;
+  animation: fromRight 1.5s,fadeIn 1s ease-out forwards; /* Animation on #fullName */
+  animation-delay: 0.4s; /* Delay on #fullName */
+}
+#intro{
+  display: grid;
+  place-items: center;
+  padding: 0vw 3vw;
+}
+#intro_img{
+  width: 100%;;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+#intro_img img{
+  
+   border-radius: 50%; 
+   width: 20vw;
+  height: auto;
+   transition: transform .2s;  /* Smooth transition for the flip */
+  transform-style: preserve-3d;  /* Preserve 3D space */
+  position: relative;
+}
+    #intro_img img:hover {
+      transform: rotateY(180deg);  /* Flip the image 180 degrees horizontally on hover */
+    }
+@keyframes fromRight {
+  from {
+    transform: translateX(30px); /* Starts 100px to the right */
+  }
+  to {
+    transform: translateX(0); /* Ends at its original position */
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; /* Starts invisible */
+  }
+  to {
+    opacity: 1; /* Ends visible */
+  }
+}
+@keyframes fadeInOpacity {
+  from {
+    opacity: 0; /* Starts invisible */
+  }
+  to {
+    opacity: 0.7; /* Ends visible */
+  }
+}
+
+@media (max-width: 981px) and (max-height: 832px) {
+  #hero{
+    flex-wrap: wrap;
+  }
 }
