--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: #282c34;
+  background-color: rgb(40, 44, 52,0.3);
   padding: 1rem 0 !important; 
   z-index: 1000;
 }
