--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,9 @@
   padding-top: 6vh;
   height: 100vh;
   background-color: #0c1b2b;
-  display: grid;
-  place-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #hero{
@@ -13,7 +14,6 @@
   display: flex;
 }
 #Hi {
-  line-height: 0;
   color: #00F2DE;
   font-family: "Inconsolata", monospace;
   animation: fromRight 1s,fadeIn 1s ease-out forwards; /* Animation on #fullName */
@@ -46,6 +46,7 @@
   padding: 0vw 3vw;
 }
 #intro_img{
+  flex-direction: column;  
   width: 100%;;
   height: auto;
   display: flex;
@@ -56,11 +57,29 @@
    border-radius: 50%; 
    width: 20vw;
   height: auto;
-   transition: transform .2s;  /* Smooth transition for the flip */
+   transition: transform 1s;  /* Smooth transition for the flip */
   transform-style: preserve-3d;  /* Preserve 3D space */
   position: relative;
+    animation: rotateY 2s; /* Animation on #fullName */
+     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+  z-index: 2;
 }
-    #intro_img img:hover {
+
+.ball-shadow {
+  width: 21vw;
+  height: 3vw;
+  background: rgba(0, 0, 0, 0.6);
+  filter: blur(5vh);
+  border-radius: 50%;
+  z-index: 1;
+  animation: rotate 1.9s; /* Animation on #fullName */
+  transition: transform .7s; 
+}
+ #intro_img img:hover ~ .ball-shadow {
+  transform: rotate(180deg);
+}
+
+    #intro_img img:hover  {
       transform: rotateY(180deg);  /* Flip the image 180 degrees horizontally on hover */
     }
 @keyframes fromRight {
@@ -71,7 +90,22 @@
     transform: translateX(0); /* Ends at its original position */
   }
 }
-
+@keyframes rotateY {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotateY(1440deg);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(1440deg);
+  }
+}
 @keyframes fadeIn {
   from {
     opacity: 0; /* Starts invisible */
@@ -89,8 +123,33 @@
   }
 }
 
-@media (max-width: 981px) and (max-height: 832px) {
+@media (max-width: 1100px)  {
+  /* Header CSS */
+
   #hero{
+    height: 85vh;
     flex-wrap: wrap;
+    flex-direction: column-reverse;
+    justify-content: start;
   }
+  #intro_img{
+    align-items: center;
+  }
+
+#intro_img img{
+  
+   width: 60vw;
+  height: auto;
+}
+
+}
+@media (max-width: 260px){
+
+#description {
+  font-size: 7vw;}
+#intro_img img{
+   width: 60vw;
+  height: auto;
+}
+
 }
