--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #0D1B2A;
 }
 html, body {
   margin: 0;
@@ -17,4 +18,51 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+
+@keyframes expand {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.5);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeFromBottom8{
+  from {
+    transform: translateY(20%);
+  }
+  to {
+    transform: translateY(0);
+    opacity: 0.85;
+  }
+}
+@keyframes fadeFromBottom{
+  from {
+    transform: translateY(20%);
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes whiteShadowFadeIn {
+  from {
+    text-shadow: 0 0 0 0 rgba(255,255,255,0);
+  }
+  to {
+      text-shadow: 1px 1px 8px white;
+
+  }
 }
