--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,19 +5,17 @@
   align-items: center;
 }
 .hero_container{
-  height: 80vh;
+  height: 50vh;
   width: 80%;
   display: grid;
-  grid-template-rows: 20% 5% 10% 25% 10% 5% 20%;
+  grid-template-rows: auto-fill  5% 10% 25% 10% 5% ;
   grid-template-columns: 65% 35%;
   grid-template-areas: 
-  ". ."
   "item1 photo"
   "item2 photo"
   "item3 photo"
   "item4 photo"
-  "item5 photo"
-  ". .";
+  "item5 photo";
 }
 .hi{
   display: flex;
@@ -31,6 +29,7 @@
   display: flex;
   align-items: center;
   grid-area: item3;
+  
 }
 .description{
   grid-area: item4;
@@ -42,6 +41,19 @@
 .img{
   grid-area: photo;
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.img h1{
+  background-color: white;
+  height: 20vw;
+  width: 20vw;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .intro{
@@ -63,6 +75,7 @@
     font-size: 1.2rem;
     font-weight: 600;
 }
+
 .title p{
     font-size: 2.4rem;
   font-weight: 700;
