--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,12 +3,15 @@
   top: 0;
   left: 0;
   width: 100%;
-  background-color: rgb(40, 44, 52,0.3);
+  background-color: rgb(13, 27, 42, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   padding: 1rem 0 !important; 
   z-index: 1000;
 }
 
 .nav-links {
+  background-color: transparent;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -17,15 +20,19 @@
   margin: 0 !important;
   padding: 0 !important;
 }
-
+.nav-links li{
+  background-color: transparent;
+}
 .nav-links li a {
   color: white;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: .9rem;
   font-weight: 500;
-  transition: color 0.3s;
+  background-color: transparent;
+  transition: color 0.3s, font-size 0.2s;
 }
 
 .nav-links li a:hover {
+  font-size: 1rem;
   color: #61dafb;
 }
