--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,13 +1,8 @@
 .experience{
-    height: 100vh;
-    background-color: red;
+    height: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-.econtainer{
-    height: 80vh;
-    width: 100vh;
-    background-color: white;
-
+    background-color: red;
+    min-height: 100vh ;
 }
