--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,11 @@
 .hero{
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .hero_container{
-  height: 50vh;
+  min-height: 50vh;
   width: 80%;
   display: grid;
   grid-template-rows: auto-fill  5% 10% 25% 10% 5% ;
@@ -95,14 +95,52 @@
 .name h1{
   font-size:7vw;
   } 
+  .hero_container{
+  grid-template-rows: auto-fill  20% 5% 10% 25% 10% 5% ;
+  grid-template-columns:  15% 80%;
+  
+  grid-template-areas: 
+  "photo photo"
+  "item1 item1"
+  "item2 item2"
+  "item3 item3"
+  "item4 item4"
+  "item5 item5";
+  justify-content: center;
+}
+.header{
+  margin-top: 50px ;
+}
+ .center-text{
+    text-align: center;
+  }
+   .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 @media (max-width: 700px) {
 .title p {
     font-size: 1.7rem;
+    text-align: center;
+  }
+  .hi h1{
+    font-size: .7rem;
+    text-align: center;
   }
 }
 @media (max-width: 550px) {
 .title p {
     font-size: 5vw;
+  }
+  .header{
+  margin-top: 20px ;
+}
+  
+}
+@media (max-height: 480px){
+  .header{
+    margin-top: 10vh;
   }
 }
