--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
   -webkit-backdrop-filter: blur(5px);
   padding: 1rem 0 !important; 
   z-index: 1000;
+
 }
 
 .nav-links {
@@ -36,3 +37,13 @@
   font-size: 1rem;
   color: #61dafb;
 }
+.navbar-container.hide {
+  transition: transform 0.4s ease;
+  transform: translateY(-100%);
+}
+
+.navbar-container.show {
+  transition: transform 0.4s ease;
+  transform: translateY(0);
+}
+
