--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,7 +3,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px white solid;
 }
 .about-container{
     margin-top: 40px;
@@ -57,17 +56,46 @@
     align-items: center;
     margin-bottom:2rem;
 }
+
+@media (min-width: 1500px) and (max-width: 2000px) {
+   .about-description p{
+    font-size: 1.3rem;
+   }
+}
+
+
+@media(max-width:1100px){
+    .about-container{
+        max-width: 85%;
+    }
+}
+@media(max-width:1000px){
+   .about-container{
+      grid-template-areas: 
+    "aboutImg aboutImg"
+    "aboutTitle aboutTitle"
+    "aboutDescription aboutDescription";
+   }
+   .about-img img{
+      max-width: 50%;
+      margin-top: 3%;
+   }
+   .about-description{
+    display: flex;
+    justify-content: center;
+   }
+   .about-description p{
+    max-width: 80%;
+    text-align: center;
+   }
+}
 @media(max-width: 875px){
     .about-container{
         max-width: 100%;
         width: 100%;
     }
 }
-@media(max-width:1100px){
-    .about-container{
-        max-width: 85%;
-    }
-}
+
 @media (max-width: 800px){
    
 }
