--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -72,13 +72,14 @@
 @media(max-width:1000px){
    .about-container{
       grid-template-areas: 
-    "aboutImg aboutImg"
     "aboutTitle aboutTitle"
+    "aboutImg aboutImg"
     "aboutDescription aboutDescription";
    }
    .about-img img{
       max-width: 50%;
       margin-top: 3%;
+      margin-bottom: 10%;
    }
    .about-description{
     display: flex;
