--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -27,6 +27,20 @@
 .about-img img{
     max-width: 80%;
     margin-top: 20%;
+    border-radius: 10px;
+}
+.about-container img{
+    
+    transition: box-shadow 0.3s ease-in-out,filter .3s ease-in-out, transform .4s ease-in-out;
+      filter: hue-rotate(180deg) brightness(70%);
+    box-shadow: 0 0 0 0 white;
+
+}
+
+.about-container img:hover{
+    box-shadow: 3px 3px 5px 0 #00f6ff;
+    transform: translateY(-5px) translateX(-5px);
+      filter: hue-rotate(0) brightness(110%);
 }
 .about-title{
     grid-area: aboutTitle;
@@ -61,8 +75,15 @@
    .about-description p{
     font-size: 1.3rem;
    }
+   .about-img img{
+    max-width: 70%;
+    margin-top: 10%;
 }
 
+}
+@media (max-width: 1500px){
+    
+}
 
 @media(max-width:1100px){
     .about-container{
@@ -77,9 +98,9 @@
     "aboutDescription aboutDescription";
    }
    .about-img img{
-      max-width: 50%;
+      max-width: 40%;
       margin-top: 3%;
-      margin-bottom: 10%;
+      margin-bottom: 5%;
    }
    .about-description{
     display: flex;
@@ -88,6 +109,9 @@
    .about-description p{
     max-width: 80%;
     text-align: center;
+   }
+   .about-title{
+    margin-bottom: 0;
    }
 }
 @media(max-width: 875px){
