--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,21 +40,28 @@
 
 .img{
   grid-area: photo;
+  width: 100%;
+  height: 100%;
   background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
 
 }
-.img h1{
-  background-color: white;
-  height: 20vw;
-  width: 20vw;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
+.img-container{
+  background-color: transparent;
+  z-index: 2;
+  height: 350px;
+  width: auto;
+}
+.img {
+
+
+}
+.heroImg{
+  border-radius: 50%;
+  height: 100%;
 }
 
 .intro{
@@ -86,17 +93,17 @@
   .title p {
     font-size: 2.2rem;
   }
+  .img-container{
+    margin-left: 50px;
+  }
 }@media (max-width: 1000px) {
   .title p {
     font-size: 1.8rem;
   }
-}
-
-@media (max-width: 800px) {
-.name h1{
-  font-size:7vw;
-  } 
-  .hero_container{
+   .img-container{
+    margin-left: 0px;
+  }
+   .hero_container{
   grid-template-rows: auto-fill  40% 5% 10% 25% 10% 5% ;
   grid-template-columns:  15% 80%;
   
@@ -109,11 +116,18 @@
   "item5 item5";
   justify-content: center;
 }
-.img h1{
+}
+
+@media (max-width: 800px) {
+.name h1{
+  font-size:7vw;
+  } 
+ 
+.img-container{
   height: 40vw;
   width: 40vw;
-
 }
+
 .header{
   margin-top: 50px ;
 }
