--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,43 @@ html {
 
   }
 }
+
+@keyframes fadeIn{
+   from {
+   opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes FromBottom8{
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+.section {
+  transition: opacity 1s ease, transform 1s ease;
+}
+.fade-section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.fade-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
