--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,4 +1,14 @@
- .about{
+.fade-section {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1.5s 0.3s ease, transform 0.8s ease;
+}
+
+.fade-section.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
+.about{
     min-height: 100vh;
     display: flex;
     align-items: center;
