--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,6 @@
+@import url("../../App.css");
+
+
 .navbar-container {
   position: fixed;
   top: 0;
@@ -12,6 +15,7 @@
 }
 
 .nav-links {
+  
   background-color: transparent;
   list-style: none;
   display: flex;
@@ -22,8 +26,15 @@
   padding: 0 !important;
 }
 .nav-links li{
+  opacity: 0;
+  animation: fadeIn .5s  ease-in forwards ;
   background-color: transparent;
 }
+
+.nav-links li:nth-child(1) { animation-delay: 1.5s; }
+.nav-links li:nth-child(2) {animation-delay: 1.75s;}
+.nav-links li:nth-child(3) {animation-delay: 2s;}
+
 .nav-links li a {
   color: white;
   text-decoration: none;
