remove purple background

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -155,6 +155,11 @@
     text-align: center;
   }
 }
+@media (max-width: 600px) {
+  .hero{
+  animation: fadeIn .5s .5s ease-in forwards;
+}
+}
 @media (max-width: 550px) {
 .title p {
     font-size: 5vw;
